@@ -5,6 +5,7 @@ set -e
 export JAVA_OPTS="$JAVA_OPTS \
 	-XX:HeapDumpPath=/usr/local/tomcat/logs \
 	-XX:+HeapDumpOnOutOfMemoryError \
-	-XX:+UseParallelGC"
+	-XX:+UnlockExperimentalVMOptions \
+	-XX:+UseZGC"
 
 exec "$@"
